--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -1,14 +1,57 @@
-<!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 <head>
-<meta charset="US-ASCII">
-<title>Insert title here</title>
+<meta charset="utf-8" />
+<title>Halloween Treat Count</title>
+<style>
+.button {
+	background-color: orange;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 24px;
+	margin: 4px 2px;
+}
+</style>
+
 </head>
 <body>
+	<table>
+		<tr>
+			<td><form action="/trickOrTreat" method="post">
+					<input name="count" value="1" hidden="true" /> <input type="submit"
+						class="medium button" value="1" />
+				</form></td>
+			<td>&nbsp;</td>
+			<td><form action="/trickOrTreat" method="post">
+					<input name="count" value="2" hidden="true" /> <input type="submit"
+						class="medium button" value="2" />
+				</form></td>
+		</tr>
+		<tr>
+			<td><form action="/trickOrTreat" method="post">
+					<input name="count" value="3" hidden="true" /> <input type="submit"
+						class="medium button" value="3" />
+				</form></td>
+			<td style="width: 20px"></td>
+			<td><form action="/trickOrTreat" method="post">
+					<input name="count" value="4" hidden="true" /> <input type="submit"
+						class="medium button" value="4" />
+				</form></td>
+		</tr>
+		<tr>
+			<td><form action="/trickOrTreat" method="post">
+					<input name="count" value="5" hidden="true" /> <input type="submit"
+						class="medium button" value="5" />
+				</form></td>
+		</tr>
+	</table>
 	<form action="/trickOrTreat" method="post">
-		<input name="count" type="text"/>
-		<input type="submit" value="Submit"/>
+		<input name="count" type="text"
+			style="width: 100px; font-size: 24px; padding: 15px 32px;" /> <input
+			type="submit" class="button" value="Submit" />
 	</form>
 
 </body>
-</html>
